--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 # implied
 
-This package contain a single function, implied_probabilities(), that convert bookmaker odds into proper probabiltiies. Several methods are available, with different assumptions regarding the underlying mechanism the bookmakers convert their probabilities into odds.  
+This package contain a single function, implied_probabilities(), that convert bookmaker odds into proper probabilities. Several methods are available, with different assumptions regarding the underlying mechanism the bookmakers convert their probabilities into odds.  
 
 A naive conversion of bookmaker odds into probabilities has two main problems. The first is that the probabilities are not proper probabilities, since they sum to more than 1. The excess probability is called the bookmakers margin. The second problem is that the probabilities, even if the margin is removed, will be biased in several ways, usually because of what is called the [favorite-longshot bias](https://en.wikipedia.org/wiki/Favourite-longshot_bias). The methods in this package remove the bookmaker margin and some of them also adjust for favorite-longshot bias.
 
@@ -32,7 +32,7 @@ devtools::install_github("opisthokonta/implied")
 
 # The basic method
 
-The default method used by the function implied_probabilities() is called the basic method. This is the simplest and most common method for converting bookmaker odds into probabilties, and is obtained by dividing the naive probabilities (the inverted odds) by the sum of the inverted odds. If <i>p<sub>i</sub></i> is the true underlying probability for outcome <i>i</i>,  and <i>r<sub>i</sub></i> is the cooresponding inverted odds, then the probabilities are computed as 
+The default method used by the function implied_probabilities() is called the basic method. This is the simplest and most common method for converting bookmaker odds into probabilities, and is obtained by dividing the naive probabilities (the inverted odds) by the sum of the inverted odds. If <i>p<sub>i</sub></i> is the true underlying probability for outcome <i>i</i>,  and <i>r<sub>i</sub></i> is the corresponding inverted odds, then the probabilities are computed as 
 
 <i>p<sub>i</sub></i> = <i>r<sub>i</sub></i> / sum(<i>r</i>)
 
@@ -77,7 +77,7 @@ res2$zvalues
 
 # Margin Weights Proportional to the Odds
 
-This method is from [Joseph Buchdahl's Wisom of the Crowds document](http://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proprtional to the probabilitiy of the outcome. In other words, the excessive probabilties are unevenly applied in a way that is reflects the favorite-longshot bias. 
+This method is from [Joseph Buchdahl's Wisom of the Crowds document](http://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proportional to the probability of the outcome. In other words, the excessive probabilities are unevenly applied in a way that is reflects the favorite-longshot bias. 
 
 The probabilities are calculated can be calculated from the bookmaker odds <i>O</i> using the following formula
 
@@ -96,7 +96,7 @@ res3$specific_margins
 
 # The odds ratio method
 
-The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilties using the odds ratio (OR) function:
+The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilities using the odds ratio (OR) function:
 
 OR = <i>p<sub>i</sub></i>  (1 - <i>r<sub>i</sub></i>) / <i>r<sub>i</sub></i> (1 - <i>p<sub>i</sub></i>)
 
@@ -118,7 +118,7 @@ res4$odds_ratios
 
 # The power method
 
-The power method models the bookmaker probabilties as a power function of the proper probabilties. This method is also described in the Wisdom of the Crowds document, where it is referred to as the logarithmic method.
+The power method models the bookmaker probabilities as a power function of the proper probabilities. This method is also described in the Wisdom of the Crowds document, where it is referred to as the logarithmic method.
 
 <i>p<sub>i</sub></i> = <i>r<sub>i</sub></i><sup>(1/k)</sup>
 
@@ -135,7 +135,7 @@ res4$exponents
 
 # The additive method
 
-The additive method removes the margin from the naive probabilites by subtracting an equal amount of of the margin from each outcome. The formula used is
+The additive method removes the margin from the naive probabilities by subtracting an equal amount of of the margin from each outcome. The formula used is
 
 <i>p<sub>i</sub></i> = <i>r<sub>i</sub></i> - ((sum(<i>r</i>) - 1) / n)
 
@@ -150,7 +150,7 @@ res5$probabilities
 
 ```
 
-One problem with the additive method is that it can produce negative probabilities, escpecially for outcomes with low probabilties. This can often be the case when there are many outcomes, for example in racing sports. If this happens, you will be given a warning. Here is an example taken from Clarke et al (2017):
+One problem with the additive method is that it can produce negative probabilities, especially for outcomes with low probabilities. This can often be the case when there are many outcomes, for example in racing sports. If this happens, you will be given a warning. Here is an example taken from Clarke et al (2017):
 
 ```{r additive2}
 
