:construction: Used usethis.
Added AppVeyor, Travis, Codecov, and testthat. Added WIP badge to readme. Change readme output to github document.

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,9 @@
 ---
 output:
-  md_document:
-    variant: markdown_github
+  github_document:
+    html_preview: true
 ---
+
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -13,6 +14,13 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 ```
+
+<!-- badges: start -->
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/opisthokonta/implied?branch=master&svg=true)](https://ci.appveyor.com/project/opisthokonta/implied)
+[![Travis build status](https://travis-ci.org/opisthokonta/implied.svg?branch=master)](https://travis-ci.org/opisthokonta/implied)
+[![Codecov test coverage](https://codecov.io/gh/JonasMoss/implied/branch/master/graph/badge.svg)](https://codecov.io/gh/JonasMoss/implied?branch=master)
+[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+<!-- badges: end -->
 
 # implied
 
