:books: Suggested shortened readme.

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,15 +22,28 @@ knitr::opts_chunk$set(
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 <!-- badges: end -->
 
-# implied
+## implied
 
-This package contain a single function, implied_probabilities(), that convert bookmaker odds into proper probabilities. Several methods are available, with different assumptions regarding the underlying mechanism the bookmakers convert their probabilities into odds.  
+This package converts bookmaker odds into proper probabilities with the function 
+`implied_probabilities`. Currently six methods are available, each of them 
+with different assumptions about how the bookmakers convert their probabilities 
+into odds.  
 
-A naive conversion of bookmaker odds into probabilities has two main problems. The first is that the probabilities are not proper probabilities, since they sum to more than 1. The excess probability is called the bookmakers margin. The second problem is that the probabilities, even if the margin is removed, will be biased in several ways, usually because of what is called the [favorite-longshot bias](https://en.wikipedia.org/wiki/Favourite-longshot_bias). The methods in this package remove the bookmaker margin and some of them also adjust for favorite-longshot bias.
+The natural conversion of bookmaker odds into probabilities is to take the 
+inverse of the odds. This procedure has two serious problems, as the converted 
+probabilities
 
+1. The converted probabilities are not proper, as they can sum to more than one. 
+   The excess probability is called the *bookmaker margin*. 
+2. The converted probabilities will be biased due to 
+   [favorite-longshot bias](https://en.wikipedia.org/wiki/Favourite-longshot_bias). 
+   This happens even if the bookmaker margin is accounted for.
+   
+The methods in this package remove the bookmaker margin and some of them also 
+adjust for favorite-longshot bias.
 
-
-# Installation
+## Installation
+Install the package using `devtools` from inside `R`.
 
 ```{r install, eval=FALSE}
 install.packages("devtools")
@@ -38,149 +51,26 @@ devtools::install_github("opisthokonta/implied")
 ```
 
 
-# The basic method
+## Usage
 
-The default method used by the function implied_probabilities() is called the basic method. This is the simplest and most common method for converting bookmaker odds into probabilities, and is obtained by dividing the naive probabilities (the inverted odds) by the sum of the inverted odds. If <i>p<sub>i</sub></i> is the true underlying probability for outcome <i>i</i>,  and <i>r<sub>i</sub></i> is the corresponding inverted odds, then the probabilities are computed as 
-
-<i>p<sub>i</sub></i> = <i>r<sub>i</sub></i> / sum(<i>r</i>)
-
-This method tend to be the least accurate of the methods in this package. I have also seen this normalization method been referred to as the multiplicative method.
-
-The implied_probabilities() function return a list with the proper probabilities (as a matrix) and the bookmaker margins.
-
-In the examples below are three sets of bookmaker odds from three football matches.
+A bookmaker provides the odds 4.20 for home, 3.70 for a draw, and 1.95 for 
+away. To calculate the implied probabilities for these odds using the
+`basic` method call:
 
 ```{r basic}
-
 library(implied)
 
-# One column for each outcome, one row for each race or match.
-my_odds <- rbind(c(4.20, 3.70, 1.95),
-                 c(2.45, 3.70, 2.90),
-                 c(2.05, 3.20, 3.80))
-colnames(my_odds) <- c('Home', 'Draw', 'Away')
-
-res1 <- implied_probabilities(my_odds)
-
-res1$probabilities
-
-res1$margin
+# method = c("basic", "shin", "wpo", "or", "power", "additive")
+implied_probabilities(c(4.20, 3.70, 1.95), method = "basic")
 
 ```
 
-# Shin's method
+## Documentation
 
-Shin's method is based on the assumption that there is a small proportion of bettors that actually knows the outcome (called inside traders), and the rest of the bettors reflect the otherwise "true" uncertainty about the outcome. Unfortunately, we can not know what the insiders know, but Shin's method gives an estimate of the proportion of insiders (denoted Z). 
+See the [overview vignette](https://github.com/ophistokonta/implied/vignettes/overview)
+for an overview of the package, including a description of the methods used to
+calculate implied probabilities.
 
-
-```{r shin}
-res2 <- implied_probabilities(my_odds, method = 'shin')
-
-res2$probabilities
-
-# The estimated proportion of inside traders.
-res2$zvalues
-```
-
-
-# Margin Weights Proportional to the Odds
-
-This method is from [Joseph Buchdahl's Wisdom of the Crowds document](http://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proportional to the probability of the outcome. In other words, the excessive probabilities are unevenly applied in a way that is reflects the favorite-longshot bias. 
-
-The probabilities are calculated can be calculated from the bookmaker odds <i>O</i> using the following formula
-
-<i>p<sub>i</sub></i> = n * O<sub>i</sub> / (n - M * O<sub>i</sub>)
-
-where n is the number of outcomes, and M is the bookmaker margin.
-
-```{r wpo}
-res3 <- implied_probabilities(my_odds, method = 'wpo')
-
-res3$probabilities
-
-# The margins applied to each outcome.
-res3$specific_margins
-```
-
-# The odds ratio method
-
-The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilities using the odds ratio (OR) function:
-
-OR = <i>p<sub>i</sub></i>  (1 - <i>r<sub>i</sub></i>) / <i>r<sub>i</sub></i> (1 - <i>p<sub>i</sub></i>)
-
-This gives the probabilities 
-
-<i>p<sub>i</sub></i> = <i>r<sub>i</sub></i> / OR + <i>r<sub>i</sub></i> - (OR * <i>r<sub>i</sub></i>)
-
-where the odds ratio OR is selected so that sum(<i>p<sub>i</sub></i>) = 1.
-
-
-```{r or}
-res4 <- implied_probabilities(my_odds, method = 'or')
-
-res4$probabilities
-
-# The odds ratios converting the proper probablities to bookmaker probabilities.
-res4$odds_ratios
-```
-
-# The power method
-
-The power method models the bookmaker probabilities as a power function of the proper probabilities. This method is also described in the Wisdom of the Crowds document, where it is referred to as the logarithmic method.
-
-<i>p<sub>i</sub></i> = <i>r<sub>i</sub></i><sup>(1/k)</sup>
-
-where <i>k</i> is selected so that sum(<i>p<sub>i</sub></i>) = 1.
-
-```{r power}
-res4 <- implied_probabilities(my_odds, method = 'power')
-
-res4$probabilities
-
-# The inverse exponents (n) used to convert the proper probablities to bookmaker probabilities.
-res4$exponents
-```
-
-# The additive method
-
-The additive method removes the margin from the naive probabilities by subtracting an equal amount of of the margin from each outcome. The formula used is
-
-<i>p<sub>i</sub></i> = <i>r<sub>i</sub></i> - ((sum(<i>r</i>) - 1) / n)
-
-If there are only two outcomes, the additive method and Shin's method are equivalent.
-
-
-```{r additive1}
-
-res5 <- implied_probabilities(my_odds, method = 'additive')
-
-res5$probabilities
-
-```
-
-One problem with the additive method is that it can produce negative probabilities, especially for outcomes with low probabilities. This can often be the case when there are many outcomes, for example in racing sports. If this happens, you will be given a warning. Here is an example taken from Clarke et al (2017):
-
-```{r additive2}
-
-my_odds2 <- t(matrix(1/c(0.870, 0.2, 0.1, 0.05, 0.02, 0.01)))
-colnames(my_odds2) <- paste('X', 1:6, sep='')
-
-res6 <- implied_probabilities(my_odds2, method = 'additive')
-
-res6$probabilities
-
-```
-
-
-# Other packages
-The only other R package I know of with related functionality is the [gambleR](https://github.com/DataWookie/gambleR) package. The [odds.converter](https://cran.r-project.org/web/packages/odds.converter/index.html) package can convert between different odds formats, including to decimal odds, that this package requires.
-
-
-# Literature
-Here are some relevant references and links:
-
-* Hyun Song Shin (1991) Optimal betting odds against insider traders. [Link](https://www.jstor.org/stable/2234434)
-* Erik Štrumbelj (2014) On determining probability forecasts from betting odds. [Link](https://www.sciencedirect.com/science/article/pii/S0169207014000533)
-* Joseph Buchdahl - USING THE WISDOM OF THE CROWD TO FIND VALUE IN A FOOTBALL MATCH BETTING MARKET (http://www.football-data.co.uk/wisdom_of_crowd_bets)
-* Keith Cheung (2015) Fixed-odds betting and traditional odds (http://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/)
-* Stephen Clarke, Stephanie Kovalchik & Martin Ingram (2017) Adjusting Bookmaker's Odds to Allow for Overround [Link](http://www.sciencepublishinggroup.com/journal/paperinfo?journalid=155&doi=10.11648/j.ajss.20170506.12)
+## How to Contribute or Get Help
+If you encounter a bug, have a feature request or need some help, open a [Github issue](https://github.com/ophistokonta/implied/issues). Create a pull requests
+to contribute. This project follows a [Contributor Code of Conduct](https://www.contributor-covenant.org/version/1/4/code-of-conduct.md).
