--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -1,36 +1,28 @@
 ---
-output:
-  md_document:
-    variant: markdown_github
+title: "Introduction to the implied package"
+author: "Jonas C. Lindstrøm"
+date: "`r Sys.Date()`"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Introduction to the implied package}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
-```{r, echo = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.path = "README-"
+  comment = "#>"
 )
 ```
 
-# implied
 
 This package contain a single function, implied_probabilities(), that convert bookmaker odds into proper probabiltiies. Several methods are available, with different assumptions regarding the underlying mechanism the bookmakers convert their probabilities into odds.  
 
 A naive conversion of bookmaker odds into probabilities has two main problems. The first is that the probabilities are not proper probabilities, since they sum to more than 1. The excess probability is called the bookmakers margin. The second problem is that the probabilities, even if the margin is removed, will be biased in several ways, usually because of what is called the [favorite-longshot bias](https://en.wikipedia.org/wiki/Favourite-longshot_bias). The methods in this package remove the bookmaker margin and some of them also adjust for favorite-longshot bias.
 
 
-
-# Installation
-
-```{r install, eval=FALSE}
-install.packages("devtools")
-devtools::install_github("opisthokonta/implied")
-```
-
-
-# The basic method
+## The basic method
 
 The default method used by the function implied_probabilities() is called the basic method. This is the simplest and most common method for converting bookmaker odds into probabilties, and is obtained by dividing the naive probabilities (the inverted odds) by the sum of the inverted odds. If <i>p<sub>i</sub></i> is the true underlying probability for outcome <i>i</i>,  and <i>r<sub>i</sub></i> is the cooresponding inverted odds, then the probabilities are computed as 
 
@@ -60,41 +52,27 @@ res1$margin
 
 ```
 
-# Shin's method
 
-Shin's method is based on the assumption that there is a small proportion of bettors that actually knows the outcome (called inside traders), and the rest of the bettors reflect the otherwise "true" uncertainty about the outcome. Unfortunately, we can not know what the insiders know, but Shin's method gives an estimate of the proportion of insiders (denoted Z). 
-
-
-```{r shin}
-res2 <- implied_probabilities(my_odds, method = 'shin')
-
-res2$probabilities
-
-# The estimated proportion of inside traders.
-res2$zvalues
-```
-
-
-# Margin Weights Proportional to the Odds
+## Margin Weights Proportional to the Odds
 
 This method is from [Joseph Buchdahl's Wisom of the Crowds document](http://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proprtional to the probabilitiy of the outcome. In other words, the excessive probabilties are unevenly applied in a way that is reflects the favorite-longshot bias. 
 
-The probabilities are calculated can be calculated from the bookmaker odds <i>O</i> using the following formula
+The probabilities are calculated from the bookmaker odds <i>O</i> using the following formula
 
 <i>p<sub>i</sub></i> = n * O<sub>i</sub> / (n - M * O<sub>i</sub>)
 
 where n is the number of outcomes, and M is the bookmaker margin.
 
 ```{r wpo}
-res3 <- implied_probabilities(my_odds, method = 'wpo')
+res2 <- implied_probabilities(my_odds, method = 'wpo')
 
-res3$probabilities
+res2$probabilities
 
 # The margins applied to each outcome.
-res3$specific_margins
+res2$specific_margins
 ```
 
-# The odds ratio method
+## The odds ratio method
 
 The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilties using the odds ratio (OR) function:
 
@@ -108,15 +86,15 @@ where the odds ratio OR is selected so that sum(<i>p<sub>i</sub></i>) = 1.
 
 
 ```{r or}
-res4 <- implied_probabilities(my_odds, method = 'or')
+res3 <- implied_probabilities(my_odds, method = 'or')
 
-res4$probabilities
+res3$probabilities
 
 # The odds ratios converting the proper probablities to bookmaker probabilities.
-res4$odds_ratios
+res3$odds_ratios
 ```
 
-# The power method
+## The power method
 
 The power method models the bookmaker probabilties as a power function of the proper probabilties. This method is also described in the Wisdom of the Crowds document, where it is referred to as the logarithmic method.
 
@@ -133,7 +111,7 @@ res4$probabilities
 res4$exponents
 ```
 
-# The additive method
+## The additive method
 
 The additive method removes the margin from the naive probabilites by subtracting an equal amount of of the margin from each outcome. The formula used is
 
@@ -164,15 +142,56 @@ res6$probabilities
 ```
 
 
-# Other packages
-The only other R package I know of with related functionality is the [gambleR](https://github.com/DataWookie/gambleR) package. The [odds.converter](https://cran.r-project.org/web/packages/odds.converter/index.html) package can convert between different odds formats, including to decimal odds, that this package requires.
+## Balanced books and Shin's method
+
+The two methods referred to as "balanced book" and Shin's method are based on the assumption that there is a small proportion of bettors that actually knows the outcome (called inside traders), and the rest of the bettors reflect the otherwise "true" uncertainty about the outcome. The proportion of inside traders is denoted Z. 
+
+The two methods differ in what assumptions they make about how the bookmakers react to the pressence of inside traders. Shin's method is derived from the assumption that the bookmakers tries to maximize their profits when there are inside traders. The balanced books method assumes the bookmakers tries to minimize their losses in the worst case scenario if the least likely outcome were to acctually occur.  
+ 
+We can not know what the insiders know, but both methods gives an estimate of the proportion of insiders. 
 
 
-# Literature
+```{r shin}
+res7 <- implied_probabilities(my_odds, method = 'shin')
+
+res7$probabilities
+
+# The estimated proportion of inside traders.
+res7$zvalues
+```
+
+
+```{r bb}
+# Balanced books
+res8 <- implied_probabilities(my_odds, method = 'bb')
+
+res8$probabilities
+
+# The estimated proportion of inside traders.
+res8$zvalues
+```
+
+
+
+## Other packages
+The [odds.converter](https://cran.r-project.org/web/packages/odds.converter/index.html) package can convert between different odds formats, including to decimal odds, that this package requires.
+
+
+## Literature
 Here are some relevant references and links:
 
-* Hyun Song Shin (1991) Optimal betting odds against insider traders. [Link](https://www.jstor.org/stable/2234434)
-* Erik Štrumbelj (2014) On determining probability forecasts from betting odds. [Link](https://www.sciencedirect.com/science/article/pii/S0169207014000533)
 * Joseph Buchdahl - USING THE WISDOM OF THE CROWD TO FIND VALUE IN A FOOTBALL MATCH BETTING MARKET (http://www.football-data.co.uk/wisdom_of_crowd_bets)
+
 * Keith Cheung (2015) Fixed-odds betting and traditional odds (http://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/)
+
 * Stephen Clarke, Stephanie Kovalchik & Martin Ingram (2017) Adjusting Bookmaker's Odds to Allow for Overround [Link](http://www.sciencepublishinggroup.com/journal/paperinfo?journalid=155&doi=10.11648/j.ajss.20170506.12)
+
+* Hyun Song Shin (1992) Prices of State Contingent Claims with Insider Traders, and the Favourite-Longshot Bias [Link](https://www.jstor.org/stable/2234526)
+
+*  Hyun Song Shin (1993) Measuring the Incidence of Insider Trading in a Market for State-Contingent Claims [Link](https://www.jstor.org/stable/2234526)
+
+* Bruno Jullien & Bernard Salanié (1994) Measuring the incidence of insider trading: A comment on Shin [Link](https://doi.org/10.2307/2235458)
+
+*  John Fingleton & Patrick Waldron (1999) Optimal Determination of Bookmakers' Betting Odds: Theory and Tests.[Link](https://pdfs.semanticscholar.org/e576/f3b103e0ba041ae072a9201b948059c7806e.pdf)
+
+
