--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -74,7 +74,7 @@ res2$specific_margins
 
 ## The odds ratio method
 
-The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilties using the odds ratio (OR) function:
+The odds ratio method is also from the Wisdom of the Crowds document, but is originally from an [article by Keith Cheung](https://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/). This method models the relationship between the proper probabilities and the improper bookmaker probabilties using the odds ratio (OR) function:
 
 OR = <i>p<sub>i</sub></i>  (1 - <i>r<sub>i</sub></i>) / <i>r<sub>i</sub></i> (1 - <i>p<sub>i</sub></i>)
 
@@ -180,9 +180,11 @@ The [odds.converter](https://cran.r-project.org/package=odds.converter) package 
 ## Literature
 Here are some relevant references and links:
 
-* Joseph Buchdahl - USING THE WISDOM OF THE CROWD TO FIND VALUE IN A FOOTBALL MATCH BETTING MARKET (https://www.football-data.co.uk/wisdom_of_crowd_bets)
+* Joseph Buchdahl - USING THE WISDOM OF THE CROWD TO FIND VALUE IN A FOOTBALL MATCH BETTING MARKET [Link](https://www.football-data.co.uk/wisdom_of_crowd_bets)
 
-* Keith Cheung (2015) Fixed-odds betting and traditional odds (https://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/)
+* Keith Cheung (2015) Fixed-odds betting and traditional odds [Link](https://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds)
+
+* Stephen Clarke, Stephanie Kovalchik & Martin Ingram (2017) Adjusting Bookmaker’s Odds to Allow for Overround [Link](http://www.sciencepublishinggroup.com/journal/paperinfo?journalid=155&doi=10.11648/j.ajss.20170506.12)
 
 * Hyun Song Shin (1992) Prices of State Contingent Claims with Insider Traders, and the Favourite-Longshot Bias [Link](https://www.jstor.org/stable/2234526)
 
