--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -55,7 +55,7 @@ res1$margin
 
 ## Margin Weights Proportional to the Odds
 
-This method is from [Joseph Buchdahl's Wisom of the Crowds document](http://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proprtional to the probabilitiy of the outcome. In other words, the excessive probabilties are unevenly applied in a way that is reflects the favorite-longshot bias. 
+This method is from [Joseph Buchdahl's Wisom of the Crowds document](https://www.football-data.co.uk/wisdom_of_crowd_bets), and assumes that the margin applied by the bookmaker for each of the outcome is proprtional to the probabilitiy of the outcome. In other words, the excessive probabilties are unevenly applied in a way that is reflects the favorite-longshot bias. 
 
 The probabilities are calculated from the bookmaker odds <i>O</i> using the following formula
 
