--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -173,26 +173,35 @@ res8$zvalues
 ```
 
 
-## The symmetric Kullback–Leibler divergence method
+## The Jensen–Shannon distance method
 
-This method sees the improper bookmaker probabilties as a noisy version of the true underlying probabilities, and uses the [symmetric Kullback-Leibler (KL) divergence](https://en.wikipedia.org/wiki/Kullback%E2%80%93Leibler_divergence#Symmetrised_divergence) as a measure of how noisy the bookmaker probabilities are.
+This method sees the improper bookmaker probabilties as a noisy version of the true underlying probabilities, and uses the [Jensen–Shannon (JS) distance](https://en.wikipedia.org/wiki/Jensen%E2%80%93Shannon_divergence) as a measure of how noisy the bookmaker probabilities are.
 
-For the sake of finding the denoised proabilities <i>p<sub>i</sub></i>, each outcome i is modelled as a binomial variable, with outcomes i and NOT i. These have probabilities <i>p<sub>i</sub></i> and 1-<i>p<sub>i</sub></i>, with corresponding improper bookmaker probabilities <i>r<sub>i</sub></i> and 1-<i>r<sub>i</sub></i>. For a given noise-level K, as measued by the symmetric KL divergence, the underlying probabilities can be found by solving the KL equation for <i>p<sub>i</sub></i>:
+For the sake of finding the denoised proabilities <i>p<sub>i</sub></i>, each outcome i is modelled as a binomial variable, with outcomes i and NOT i. These have probabilities <i>p<sub>i</sub></i> and 1-<i>p<sub>i</sub></i>, with corresponding improper bookmaker probabilities <i>r<sub>i</sub></i> and 1-<i>r<sub>i</sub></i>. For a given noise-level D, as measued by the symmetric JS distance, the underlying probabilities can be found by solving the JS distance equation for <i>p<sub>i</sub></i>:
 
-K = <i>p<sub>i</sub></i> * log(<i>p<sub>i</sub></i>/<i>q<sub>i</sub></i>) + (1-<i>p<sub>i</sub></i>) * log((1-<i>p<sub>i</sub></i>)/(1-<i>q<sub>i</sub></i>))) + <i>q<sub>i</sub></i> * log(<i>q<sub>i</sub></i>/<i>p<sub>i</sub></i>) + (1-<i>q<sub>i</sub></i>) * log((1-<i>q<sub>i</sub></i>)/(1-<i>p<sub>i</sub></i>))
 
-This is done numerically. The value of of <i>K</i> is found so that sum(<i>p<sub>i</sub></i>) = 1.
+D = 0.5 * BKL(<i>p<sub>i</sub></i>, <i>m<sub>i</sub></i>) + 0.5 * BKL(<i>r<sub>i</sub></i>, <i>m<sub>i</sub></i>) 
 
-The method was developed by Christopher D. Long (twitter: [\@octonion](https://twitter.com/octonion)), and described in a series of Twitter postings [[1](https://twitter.com/octonion/status/1403597915138953216)] [[2](https://twitter.com/octonion/status/1403843296443633665)] and a python implementation posted on GitHub ([Link](https://github.com/octonion/betting/tree/master/conversion)).
+where <i>m<sub>i</sub></i> = (<i>p<sub>i</sub></i> + <i>r<sub>i</sub></i>) / 2
 
-```{r kl}
+and 
+
+BKL(x, y) = <i>x</i> * log(<i>x</i>/<i>y</i>) + (1-<i>x</i>) * log((1-<i>x</i>)/(1-<i>y</i>))) + <i>y</i> * log(<i>y</i>/<i>x</i>) + (1-<i>y</i>) * log((1-<i>y</i>)/(1-<i>y</i>))
+
+is the "binomial" Kullback–Leibler divergence.
+
+The solution is found numerically by finding the value of of <i>D</i> so that sum(<i>p<sub>i</sub></i>) = 1.
+
+The method was developed by Christopher D. Long (twitter: [\@octonion](https://twitter.com/octonion)), and described in a series of Twitter postings [[1](https://twitter.com/octonion/status/1412847000068952064)].
+
+```{r jsd}
 # Balanced books
-res9 <- implied_probabilities(my_odds, method = 'kl')
+res9 <- implied_probabilities(my_odds, method = 'jsd')
 
 res9$probabilities
 
-# The estimated noise (KL divergence)
-res9$divergence
+# The estimated noise (JS distance)
+res9$distance
 ```
 
 ## Converting probabilities to odds
@@ -228,16 +237,16 @@ Here are some relevant references and links:
 
 * Joseph Buchdahl - USING THE WISDOM OF THE CROWD TO FIND VALUE IN A FOOTBALL MATCH BETTING MARKET [Link](https://www.football-data.co.uk/wisdom_of_crowd_bets)
 
-* Keith Cheung (2015) Fixed-odds betting and traditional odds [Link](https://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds)
+* Keith Cheung (2015) Fixed-odds betting and traditional odds [Link](https://www.sportstradingnetwork.com/article/fixed-odds-betting-traditional-odds/)
 
 * Stephen Clarke, Stephanie Kovalchik & Martin Ingram (2017) Adjusting Bookmaker’s Odds to Allow for Overround [Link](http://www.sciencepublishinggroup.com/journal/paperinfo?journalid=155&doi=10.11648/j.ajss.20170506.12)
 
 * Hyun Song Shin (1992) Prices of State Contingent Claims with Insider Traders, and the Favourite-Longshot Bias [Link](https://www.jstor.org/stable/2234526)
 
-*  Hyun Song Shin (1993) Measuring the Incidence of Insider Trading in a Market for State-Contingent Claims [Link](https://www.jstor.org/stable/2234526)
+*  Hyun Song Shin (1993) Measuring the Incidence of Insider Trading in a Market for State-Contingent Claims [Link](https://doi.org/10.2307/2234526)
 
 * Bruno Jullien & Bernard Salanié (1994) Measuring the incidence of insider trading: A comment on Shin [Link](https://doi.org/10.2307/2235458)
 
-*  John Fingleton & Patrick Waldron (1999) Optimal Determination of Bookmakers' Betting Odds: Theory and Tests.[Link](https://pdfs.semanticscholar.org/e576/f3b103e0ba041ae072a9201b948059c7806e.pdf)
+*  John Fingleton & Patrick Waldron (1999) Optimal Determination of Bookmakers' Betting Odds: Theory and Tests.[Link](https://www.semanticscholar.org/paper/Optimal-Determination-of-Bookmakers'-Betting-Odds%3A-Fingleton-Waldron/e576f3b103e0ba041ae072a9201b948059c7806e)
 
 
